Fix contact info spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -516,7 +516,7 @@ button {
     }
 
     .contact__info {
-      max-width: 250px;
+      max-width: 300px;
       margin-left: auto;
       margin-right: auto;
       margin-top: 30px;
